--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@julusian/jpeg-turbo": "^0.5.2",
     "canvas": "^2.6.0",
+    "dbus-native": "^0.4.0",
     "elgato-stream-deck": "^3.1.0",
+    "node-gtk": "^0.3.0",
     "x11": "^1.0.3"
   },
   "license": "MIT"
